# audit-system-v8

./: .env.example  .gitignore  DEPLOY.md  HANDOVER.md  PERUBAHAN-LKE.md  README.md  ROADMAP.html  ROADMAP.md  SETUP-DI-LAPTOP-LAIN.md  build_audit_kinerja_template.py  build_audit_pengadaan_template.py  build_audit_umum_template.py  build_evaluasi_mr_template.py  build_evaluasi_rb_template.py  build_evaluasi_sakip_template.py  build_evaluasi_spip_template.py  build_evaluasi_umum_template.py  build_konsultansi_umum_template.py  build_konsultasi_pengadaan_template.py  build_pemantauan_templates.py  build_reviu_templates.py  cleanup_audit_umum_template.py  create_test_fixtures_all_skills.py  docker-compose.yml  fix_audit_umum_restore_nota_dinas.py  fix_audit_umum_template.py  fix_pengadaan_template.py  inspect_ref_tpl.py  inspect_tpl.py  patch_format_arial12_15.py  rebuild_all_templates.py  test_render_all_skills.ps1  verify_lha.py
backend/: .dockerignore  Dockerfile  fly.toml  pyproject.toml  requirements.txt
backend/app/: __init__.py  auth.py  bukti_index.py  cacm_dsl.py  cacm_evaluator.py  cacm_mapping.py  cacm_schema.py  config.py  context_template.py  database.py  digest_generic.py  digest_postprocess.py  format_registry.py  graduasi.py  init_db.py  knowledge_browse.py  liteparse_extract.py  lke_writer.py  llm_extract.py  login_guard.py  main.py  models.py  prefill_temuan.py  preload_context.py  schemas.py  skills_registry.py  storage.py  survey_pendahuluan.py  wiki_promote.py  wiki_writeback.py
backend/eval/: README.md  RUBRIC.md  __init__.py  deterministic.py  (+3 more)
(+463 files in other folders)
